--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@ https://developer.mozilla.org/en-US/docs/Web/HTML/Element/img#attr-height -->
     <h1>Ayan Khan</h1>
     <h2>I am web developer</h2>
     <hr>
-    <h3><a href="./public/movie-ranking.html">My  Movie Ranking List</a></h3>
-    <img src="./assets/images/movie list.png" alt="">
+    <h3><a href="./movie-ranking.html">My  Movie Ranking List</a></h3>
+    <img src="./movie list.png" alt="">
     <h3><a href="./public/birthday-invite.html">Birthday Invite Project</a></h3>
     <img src="./assets/images/birthday-invite.png" alt="">    
     <h3><a href="./public/about.html"> About Me</a></h3>
